# libs/api-client-go/api/openapi.yaml
@@ -373,7 +373,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/UsageOverview'
+                $ref: '#/components/schemas/OrganizationUsageOverview'
           description: Current usage overview
       security:
         - bearer: []
@@ -6153,7 +6153,7 @@ components:
         - suspensionReason
         - updatedAt
       type: object
-    UsageOverview:
+    OrganizationUsageOverview:
       example:
         totalCpuQuota: 0.8008281904610115
         currentDiskUsage: 7.061401241503109
